--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="./main.js" defer></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>CRUD</title>
-</head>
-<body>
-    <input type="text" id="input">
-    <button id="submit" onclick="addItem()">Add</button>
-    <ul id="listDOM"></ul>
-</body>
+  </head>
+  <body>
+    <div class="menu">
+      <input type="text" id="input" />
+      <button id="submit" onclick="addItem()">Add</button>
+    </div>
+    <div class="ul">
+      <ul class="DOM" id="listDOM"></ul>
+    </div>
+  </body>
 </html>
