inputs now are editable

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           class="searchbar"
           type="text"
           value=""
-          name="searchbar"
+          name="searchbar""
           placeholder="Search">
       <nav class="navigation">
     <h1>Enter title and image URL</h1>
@@ -34,7 +34,7 @@
           placeholder="Name"
         />
       </div>
-      <div class="img">
+      <div class="img_url">
         <label for="imgInput">URL</label>
         <input
           name="imgInput"
